<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Edit mode menu items - only displayed when a11y touch exploration is disabled. -->
    <item
        android:id="@+id/enter_edit_mode"
        android:title="@string/ua_enter_edit_mode"
        app:contentDescription="@string/ua_enter_edit_mode"
        android:icon="@drawable/ua_ic_edit_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/leave_edit_mode"
        android:title="@string/ua_leave_edit_mode"
        app:contentDescription="@string/ua_leave_edit_mode"
        android:icon="@drawable/ua_ic_edit_off_24"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <!-- Alternate a11y menu items - only displayed when a11y touch exploration is enabled. -->

    <item
        android:id="@+id/mark_all_read"
        android:title="@string/ua_mark_all_read"
        app:contentDescription="@string/ua_description_mark_all_read"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all"
        android:title="@string/ua_delete_all"
        app:contentDescription="@string/ua_description_delete_all"
        android:visible="false"
        app:showAsAction="never" />

    <!-- Exposed for a11y, but always displayed in menu, for convenience. -->

    <item
        android:id="@+id/refresh"
        android:title="@string/ua_refresh"
        app:contentDescription="@string/ua_refresh"
        android:icon="@drawable/ua_ic_refresh_24"
        app:showAsAction="never" />
</menu>
